--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.1"
+lazy_static = "1.4.0"
 odbc-api = "4.0.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
