--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.7.1"
+axum = { version = "0.7.1", features = ["macros"] }
 lazy_static = "1.4.0"
 odbc-api = "4.0.0"
 serde = { version = "1.0.193", features = ["derive"] }
